<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#3B426A"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="114dp"
        android:layout_height="110dp"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="99dp"
        android:layout_marginRight="99dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.466"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bg" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="174dp"
        android:layout_marginLeft="174dp"
        android:layout_marginTop="7dp"
        android:layout_marginEnd="178dp"
        android:layout_marginRight="178dp"
        android:layout_marginBottom="32dp"
        android:background="#3B426A"
        android:text="@string/skype"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="250dp"
        android:layout_height="38dp"
        android:layout_marginStart="89dp"
        android:layout_marginLeft="89dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="360dp"
        android:background="#423851"
        android:ems="10"
        android:hint="@string/paassword"
        android:drawableLeft="@drawable/ic_adb_black_24dp"
        android:importantForAutofill="no"
        android:inputType="textPersonName|text"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:drawableStart="@drawable/ic_adb_black_24dp" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="250dp"
        android:layout_height="38dp"
        android:layout_marginStart="89dp"
        android:layout_marginLeft="89dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="379dp"
        android:background="#423851"
        android:ems="10"
        android:hint="@string/username"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:importantForAutofill="no"
        android:inputType="textPersonName|text"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:drawableStart="@drawable/ic_lock_black_24dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginStart="89dp"
        android:layout_marginLeft="89dp"
        android:layout_marginTop="660dp"
        android:layout_marginEnd="72dp"
        android:layout_marginRight="72dp"
        android:layout_marginBottom="360dp"
        android:background="@android:color/holo_red_dark"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="131dp"
        android:layout_height="23dp"
        android:layout_marginStart="160dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="22dp"
        android:layout_marginEnd="131dp"
        android:layout_marginRight="131dp"
        android:layout_marginBottom="146dp"
        android:drawableEnd="@drawable/ic_live_help_black_24dp"
        android:drawableRight="@drawable/ic_live_help_black_24dp"
        android:text="@string/register_here"
        android:textColor="#ffffff"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

</androidx.constraintlayout.widget.ConstraintLayout>
